src/main/java/com/example/customerinformationsystem/error/CustomerDetailsInvalidException.java
package com.example.customerinformationsystem.error;

public class CustomerDetailsInvalidException extends RuntimeException{
    public CustomerDetailsInvalidException(String message) {
        super(message);
    }
}
